--- a/rss-react-project/package.json
+++ b/rss-react-project/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "format": "npx prettier . --write",
-    "test": "jest --coverage --collectCoverageFrom='src/**/!(main).{ts,tsx}'"
+    "test": "jest --coverage --collectCoverageFrom='src/**/!(main).{ts,tsx}'",
+    "prepare": "cd .. && husky rss-react-project/.husky"
   },
   "lint-staged": {
     "src/*/.{js,jsx,ts,tsx}": [
@@ -47,6 +48,7 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "globals": "^15.1.0",
+    "husky": "^9.0.11",
     "isomorphic-fetch": "^3.0.0",
     "jest": "^29.7.0",
     "prettier": "3.2.5",
