--- a/rss-react-project/package.json
+++ b/rss-react-project/package.json
@@ -8,7 +8,7 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "format": "npx prettier . --write",
+    "format:fix": "npx prettier . --write",
     "test": "jest --coverage --collectCoverageFrom='src/**/!(main).{ts,tsx}'",
     "prepare": "cd .. && husky rss-react-project/.husky"
   },
