--- a/rss-react-project/package.json
+++ b/rss-react-project/package.json
@@ -52,6 +52,7 @@
     "husky": "^9.0.11",
     "isomorphic-fetch": "^3.0.0",
     "jest": "^29.7.0",
+    "lint-staged": "^15.2.7",
     "prettier": "3.2.5",
     "typescript": "^5.2.2",
     "typescript-eslint": "^7.8.0",
