--- a/rss-react-project/package.json
+++ b/rss-react-project/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "format:fix": "npx prettier . --write",
-    "test": "jest --coverage --collectCoverageFrom='src/**/!(main).{ts,tsx}'",
+    "test": "jest --coverage --watchAll",
     "prepare": "cd .. && husky rss-react-project/.husky"
   },
   "husky": {
@@ -24,7 +24,10 @@
     ]
   },
   "dependencies": {
+    "@testing-library/jest-dom": "^6.4.6",
     "eslint-config-prettier": "^9.1.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest-environment-jsdom": "^29.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.0",
@@ -37,6 +40,9 @@
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@esbuild-plugins/node-modules-polyfill": "^0.2.2",
     "@eslint/js": "^9.1.1",
+    "@testing-library/dom": "^10.3.1",
+    "@testing-library/react": "^16.0.0",
+    "@types/jest": "^29.5.12",
     "@types/node-fetch": "^2.6.11",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
@@ -59,7 +65,8 @@
     "jest": "^29.7.0",
     "lint-staged": "^15.2.7",
     "prettier": "3.2.5",
-    "typescript": "^5.2.2",
+    "ts-jest": "^29.2.2",
+    "typescript": "^5.5.3",
     "typescript-eslint": "^7.8.0",
     "vite": "^5.2.0"
   }
