--- a/rss-react-project/tsconfig.json
+++ b/rss-react-project/tsconfig.json
@@ -22,6 +22,6 @@
     "noFallthroughCasesInSwitch": true,
     "paths": { "@/": ["./src/"] }
   },
-  "include": ["src", ".eslintrc.cjs"],
+  "include": ["src", ".eslintrc.cjs", "jest.config.js"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
