--- a/rss-react-project/package.json
+++ b/rss-react-project/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "format:fix": "npx prettier . --write",
-    "test": "jest --coverage --watchAll",
+    "test": "jest --coverage",
     "prepare": "cd .. && husky rss-react-project/.husky"
   },
   "husky": {
