--- a/rss-react-project/package.json
+++ b/rss-react-project/package.json
@@ -24,12 +24,14 @@
     ]
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.6",
     "@testing-library/jest-dom": "^6.4.6",
     "eslint-config-prettier": "^9.1.0",
     "identity-obj-proxy": "^3.0.0",
     "jest-environment-jsdom": "^29.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.0",
     "sass": "^1.77.0",
     "styled-components": "^6.1.9",
