--- a/rss-react-project/package.json
+++ b/rss-react-project/package.json
@@ -4,10 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
+    "dev": "next dev",
+    "build": "next build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
     "format:fix": "npx prettier . --write",
     "test": "jest --coverage",
     "prepare": "cd .. && husky rss-react-project/.husky"
@@ -29,6 +28,7 @@
     "eslint-config-prettier": "^9.1.0",
     "identity-obj-proxy": "^3.0.0",
     "jest-environment-jsdom": "^29.7.0",
+    "next": "^14.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.2",
