--- a/rss-react-project/tsconfig.json
+++ b/rss-react-project/tsconfig.json
@@ -13,7 +13,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx",
+    "jsx": "preserve",
     "esModuleInterop": true,
 
     /* Linting */
@@ -21,8 +21,12 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
-    "paths": { "@/": ["./src/"] }
+    "forceConsistentCasingInFileNames": true,
+    "incremental": true,
+    "paths": { "@/": ["./src/"] },
+    "allowJs": true,
+    "plugins": [{ "name": "next" }]
   },
-  "include": ["src", ".eslintrc.cjs", "jest.config.js"],
-  "references": [{ "path": "./tsconfig.node.json" }]
+  "include": ["src", ".eslintrc.cjs", "jest.config.js", "./dist/types/**/*.ts", "./next-env.d.ts"],
+  "exclude": ["./node_modules"]
 }
