feat: update Card test for NextJS

--- a/rss-react-project/tsconfig.json
+++ b/rss-react-project/tsconfig.json
@@ -27,6 +27,6 @@
     "allowJs": true,
     "plugins": [{ "name": "next" }]
   },
-  "include": ["src", ".eslintrc.cjs", "jest.config.js", "./dist/types/**/*.ts", "./next-env.d.ts"],
+  "include": ["src", ".eslintrc.cjs", "jest.config.ts", "./dist/types/**/*.ts", "./next-env.d.ts"],
   "exclude": ["./node_modules"]
 }
