--- a/rss-react-project/package.json
+++ b/rss-react-project/package.json
@@ -69,6 +69,7 @@
     "lint-staged": "^15.2.7",
     "prettier": "3.2.5",
     "ts-jest": "^29.2.2",
+    "ts-node": "^10.9.2",
     "typescript": "^5.5.3",
     "typescript-eslint": "^7.8.0",
     "vite": "^5.2.0"
