--- a/rss-react-project/package.json
+++ b/rss-react-project/package.json
@@ -30,7 +30,8 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.0",
     "sass": "^1.77.0",
-    "vite-tsconfig-paths": "^4.3.2"
+    "vite-tsconfig-paths": "^4.3.2",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.24.1",
