--- a/rss-react-project/package.json
+++ b/rss-react-project/package.json
@@ -27,6 +27,7 @@
     "eslint-config-prettier": "^9.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.52.2",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.0",
     "sass": "^1.77.0",
