--- a/rss-react-project/package.json
+++ b/rss-react-project/package.json
@@ -23,6 +23,7 @@
     ]
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
     "@reduxjs/toolkit": "^2.2.6",
     "eslint-config-prettier": "^9.1.0",
     "react": "^18.2.0",
